public/assets/navigation/css/component.css
*,
*:after,
*::before {
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

html,
body,
.st-container,
.st-pusher,
.st-content {
	height: 100%;
}

.st-content {
	overflow-y: scroll;
	background: white;
}

.st-content,
.st-content-inner {
	position: relative;
}

.st-container {
	position: relative;
	overflow: hidden;
}

.st-pusher {
	position: relative;
	left: 0;
	z-index: 9999;
	height: 100%;
	-webkit-transition: -webkit-transform 0.5s;
	transition: transform 0.5s;
}

.st-pusher::after {
	position: absolute;
	top: 0;
	right: 0;
	width: 0;
	height: 0;
	background: rgba(0,0,0,0.2);
	content: '';
	opacity: 0;
	-webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
	transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
}

.st-menu-open .st-pusher::after {
	width: 100%;
	height: 100%;
	opacity: 1;
	-webkit-transition: opacity 0.5s;
	transition: opacity 0.5s;
}

.st-menu {
	padding: 0px;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 100;
	visibility: hidden;
	width: 220px;
	height: 100%;
	background: #202020;
	-webkit-transition: all 0.5s;
	transition: all 0.5s;
}

.st-menu::after {
	position: absolute;
	top: 0;
	right: 0;
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,0.2);
	content: '';
	opacity: 1;
	-webkit-transition: opacity 0.5s;
	transition: opacity 0.5s;
}

.st-menu-open .st-menu::after {
	width: 0;
	height: 0;
	opacity: 0;
	-webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
	transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
}

/* content style */


.st-menu ul {
	font-size: 17px;
	margin: 0;
	padding: 70px 0 0 0;
	list-style: none;
	text-align: center;
}

.st-menu h2 {
	margin: 0;
	padding: 1em;
	color: rgba(0,0,0,0.4);
	text-shadow: 0 0 1px rgba(0,0,0,0.1);
	font-weight: 300;
	font-size: 2em;
}

.st-menu ul li a {
	text-decoration: none;
	display: block;
	padding: 1.5em 0 1.5em 0em;
	outline: none;
	box-shadow: inset 0 -1px rgba(0,0,0,0.2);
	color: #f3efe0;
	text-transform: uppercase;
	text-shadow: 0 0 1px rgba(255,255,255,0.1);
	letter-spacing: 1px;
	font-weight: bold;
	-webkit-transition: background 0.3s, box-shadow 0.3s;
	transition: background 0.3s, box-shadow 0.3s;
}

.st-menu ul li:first-child a {
	box-shadow: inset 0 -1px rgba(0,0,0,0.2), inset 0 1px rgba(0,0,0,0.2);
}

.st-menu ul li a:hover {
	background: rgba(0,0,0,0.2);
	box-shadow: inset 0 -1px rgba(0,0,0,0);
	color: #fff;
}
	.st-effect-2.st-menu-open .st-pusher {
		-webkit-transform: translate3d(220px, 0, 0);
		transform: translate3d(220px, 0, 0);

	}

	.st-effect-2.st-menu {
		z-index: 1;
	}

	.st-effect-2.st-menu-open .st-effect-2.st-menu {
		visibility: visible;
		-webkit-transition: -webkit-transform 0.5s;
		transition: transform 0.5s;
	}

	.st-effect-2.st-menu::after {
		display: none;
	}
/* Effect 2: Reveal */
@media screen and (max-width: 61.1em) {
	.st-effect-2.st-menu-open .st-pusher {
		-webkit-transform: translate3d(220px, 0, 0);
		transform: translate3d(220px, 0, 0);

	}

	.st-effect-2.st-menu {
		z-index: 1;
	}

	.st-effect-2.st-menu-open .st-effect-2.st-menu {
		visibility: visible;
		-webkit-transition: -webkit-transform 0.5s;
		transition: transform 0.5s;
	}

	.st-effect-2.st-menu::after {
		display: none;
	}
}

@media screen and (max-width: 37em) {
	.st-effect-2.st-menu-open .st-pusher {
		-webkit-transform: translate3d(220px, 0, 0);
		transform: translate3d(220px, 0, 0);

	}

	.st-effect-2.st-menu {
		z-index: 1;
	}

	.st-effect-2.st-menu-open .st-effect-2.st-menu {
		visibility: visible;
		-webkit-transition: -webkit-transform 0.5s;
		transition: transform 0.5s;
	}

	.st-effect-2.st-menu::after {
		display: none;
	}
}


/* Fallback example for browsers that don't support 3D transforms (and no JS fallback) */
.no-csstransforms3d .st-pusher,
.no-js .st-pusher {
	padding-left: 300px;
}

